--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -8,17 +8,38 @@
     tools:context="com.contest.mobathon.activity.AddressFragment"
     >
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:paddingTop="20dp"
+        android:id="@+id/textView1"
+        android:textSize="16dp"
+        android:paddingLeft="10dp"
+        android:layout_alignParentStart="true" />
+
+    <com.rey.material.widget.EditText
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:paddingRight="10dp"
+        app:et_inputId="@+id/textfield_et_label_input"
+        app:et_supportMode="none"
+        style="@style/Material.Widget.EditText"
+        android:layout_alignBottom="@+id/textView1"
+        android:layout_alignStart="@+id/street" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Street"
         android:id="@+id/textView"
-        android:textSize="20dp"
+        android:textSize="16dp"
         android:paddingLeft="10dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="75dp"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@id/checkbox" />
+        android:layout_alignParentStart="true" />
 
     <com.rey.material.widget.EditText
         android:id="@+id/street"
@@ -29,7 +50,7 @@
         app:et_inputId="@+id/textfield_et_label_input"
         app:et_supportMode="none"
         style="@style/Material.Widget.EditText"
-        android:layout_alignTop="@+id/textView"
+        android:layout_alignBottom="@+id/textView"
         android:layout_toEndOf="@+id/textView2" />
 
     <TextView
@@ -37,7 +58,7 @@
         android:layout_height="wrap_content"
         android:text="Landmark"
         android:id="@+id/textView2"
-        android:textSize="20dp"
+        android:textSize="16dp"
         android:paddingLeft="10dp"
         android:layout_below="@+id/textView"
         android:layout_alignStart="@+id/textView"
@@ -51,16 +72,16 @@
         app:et_inputId="@+id/textfield_et_label_input"
         app:et_supportMode="none"
         style="@style/Material.Widget.EditText"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_toEndOf="@+id/textView3"
-        android:layout_alignStart="@+id/street" />
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Location"
         android:paddingLeft="10dp"
-        android:textSize="20dp"
+        android:textSize="16dp"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView2"
         android:layout_alignStart="@+id/textView2"
@@ -75,15 +96,16 @@
         app:et_inputId="@+id/textfield_et_label_input"
         app:et_supportMode="none"
         style="@style/Material.Widget.EditText"
-        android:layout_alignTop="@+id/textView3"
-        android:layout_alignStart="@+id/street" />
+        android:layout_above="@+id/textView4"
+        android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/landmark" />
 
     <TextView
         android:layout_width="wrap_content"
         android:paddingLeft="10dp"
         android:layout_height="wrap_content"
         android:text="Pincode"
-        android:textSize="20dp"
+        android:textSize="16dp"
         android:layout_below="@+id/textView3"
         android:id="@+id/textView4"
         android:layout_marginTop="47dp"
@@ -98,18 +120,41 @@
         app:et_inputId="@+id/textfield_et_label_input"
         app:et_supportMode="none"
         style="@style/Material.Widget.EditText"
-        android:layout_alignTop="@+id/textView4"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_alignParentEnd="true"
         android:layout_alignStart="@+id/location" />
 
-    <com.rey.material.widget.CheckedTextView
-        android:id="@id/checkbox"
+    <com.rey.material.widget.Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Material.Drawable.CheckBox"
+        android:text="Upload image"
+        android:textColor="@color/navigationBarColor"
+        android:layout_marginLeft="10dp"
+        android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_alignBottom="@+id/switches_cb1"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="80dp" />
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignBottom="@+id/button"
+        android:layout_alignEnd="@+id/switches_cb1" />
+
+    <com.rey.material.widget.CheckBox
+        android:id="@+id/switches_cb1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="I agree to send the above details"
+        android:textColor="@color/navigationBarColor"
+        android:checked="false"
+        style="@style/Material.Drawable.CheckBox"
+        android:layout_marginTop="130dp"
         android:layout_below="@+id/pincode"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="66dp" />
+        android:layout_alignStart="@+id/pincode" />
+
 
 
 </RelativeLayout>
