--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -26,7 +26,8 @@
         style="@style/Material.Widget.EditText"
         android:layout_alignBottom="@+id/textView1"
         android:layout_toEndOf="@+id/textView1"
-        android:layout_alignStart="@+id/loanamt" />
+        android:layout_alignStart="@+id/loanamt"
+        android:textColor="#000"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,7 +51,8 @@
         style="@style/Material.Widget.EditText"
         android:layout_alignBottom="@+id/textView"
         android:layout_toEndOf="@+id/textView1"
-        android:layout_alignStart="@+id/interest" />
+        android:layout_alignStart="@+id/interest"
+        android:textColor="#000"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -73,7 +75,8 @@
         style="@style/Material.Widget.EditText"
         android:layout_alignBottom="@+id/textView2"
         android:layout_toEndOf="@+id/textView2"
-        android:layout_alignStart="@+id/salary" />
+        android:layout_alignStart="@+id/salary"
+        android:textColor="#000"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -97,7 +100,8 @@
         style="@style/Material.Widget.EditText"
         android:layout_above="@+id/textView4"
         android:layout_alignParentEnd="true"
-        android:layout_alignStart="@+id/totemi" />
+        android:layout_alignStart="@+id/totemi"
+        android:textColor="#000"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -121,7 +125,8 @@
         style="@style/Material.Widget.EditText"
         android:layout_alignBottom="@+id/textView4"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/textView4" />
+        android:layout_toEndOf="@+id/textView4"
+        android:textColor="#000"/>
 
     <com.rey.material.widget.Button
         android:layout_width="wrap_content"
@@ -135,6 +140,50 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="52dp" />
 
+    <TextView
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:paddingLeft="10dp"
+        android:layout_height="wrap_content"
+        android:text="Are you eligible?(for required amount)"
+        android:textSize="16dp"
+        android:id="@+id/textView5"
+        android:layout_marginTop="39dp"
+        android:layout_below="@+id/button"
+        android:layout_alignParentStart="true" />
+    <TextView
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:paddingLeft="10dp"
+        android:layout_height="wrap_content"
+        android:text="yes"
+        android:textSize="16dp"
+        android:id="@+id/textView6"
+        android:layout_alignTop="@+id/textView5"
+        android:layout_alignEnd="@+id/totemi"
+        android:layout_marginEnd="36dp" />
+
+    <TextView
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:paddingLeft="10dp"
+        android:layout_height="wrap_content"
+        android:text="You are eligible for "
+        android:textSize="16dp"
+        android:id="@+id/textView7"
+        android:layout_marginTop="45dp"
+        android:layout_below="@+id/textView5"
+        android:layout_toStartOf="@+id/totemi" />
+    <TextView
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:paddingLeft="10dp"
+        android:layout_height="wrap_content"
+        android:textSize="16dp"
+        android:id="@+id/textView8"
+        android:layout_alignEnd="@+id/totemi"
+        android:layout_alignTop="@+id/textView7"
+        android:layout_toEndOf="@+id/button" />
 
 </RelativeLayout>
 
